--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,8 @@
-
-
-.App {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-content{
-  flex: 1;
+.App {
 }
